Fix selector strength too high for .footer_col Partially reverts #297.

--- a/wdn/templates_3.1/less/footer/footer.less
+++ b/wdn/templates_3.1/less/footer/footer.less
@@ -16,8 +16,6 @@
     padding: 10px 4px 4px;
 
     .footer_col {
-        display: none;
-
         a {
             text-decoration: none;
 
@@ -26,6 +24,9 @@
             }
         }
     }
+}
+.footer_col {
+   display: none; 
 }
 #wdn_footer_feedback {
     display: block;
